[gd_scene load_steps=5 format=3 uid="uid://bhvytctn2dvud"]

[ext_resource type="Script" uid="uid://bn6f8vsgi5oru" path="res://scenes/objects/scripts/check_point.gd" id="1_r0psj"]
[ext_resource type="Texture2D" uid="uid://b3oicqs67mm1j" path="res://assets/objects/objects.png" id="2_f65a1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r0psj"]
resource_local_to_scene = true
size = Vector2(16, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrjdh"]
atlas = ExtResource("2_f65a1")
region = Rect2(96, 160, 16, 32)

[node name="CheckPoint" type="ColorRect" groups=["CheckPoint"]]
custom_minimum_size = Vector2(16, 16)
offset_left = -8.0
offset_top = -56.0
offset_right = 8.0
color = Color(1, 1, 1, 0)
script = ExtResource("1_r0psj")
id = 1

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(8, 28)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_r0psj")
debug_color = Color(0.38633335, 0.61, 0, 0.41960785)

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
rect = Rect2(0, 0, 16, 56)
show_rect = false

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.5
offset_right = 50.5
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 0
text = "Checkpoint 1"
horizontal_alignment = 1

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="SpawnPosition" type="Marker2D" parent="Control"]
unique_name_in_owner = true

[node name="Sprite2D" type="Sprite2D" parent="Control"]
position = Vector2(0, -16)
texture = SubResource("AtlasTexture_vrjdh")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
